[metadata]
name = openghg
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
author = Christopher Woods
url = https://github.com/openghg/acquire
classifiers =
	License :: OSI Approved :: Apache
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Natural Language :: English
	Operating System :: OS Independent
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython


[flake8]
ignore = E203, W503, E501, W291, E127, E128
max-line-length = 110
